kyverno/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: no-latest
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: require-signed-pinned-images
    rule: no-latest-tag
    resources: [good]
    kind: Pod
    result: pass
  - policy: require-signed-pinned-images
    rule: no-latest-tag
    resources: [bad]
    kind: Pod
    result: fail
